--- a/kk.html
+++ b/kk.html
@@ -115,15 +115,15 @@
                     <h2>More</h2>
                     <a href="#lal_bahadur_shastri">Lal Bahadur Shastri</a>
                     <a href="#Rajmata_Jijabai">Rajmata Jijabai</a>
-                    <a href="">Work</a>
-                    <a href="">Achivements</a>
-                    <a href="">memories</a>
+                    <a href="">......</a>
+                    <a href="">........</a>
+                    <a href="">........</a>
                 </section> 
                 <section class="contact-details">
                     <h2>Contacts</h2>
                     <p>
-                        Wonder <br/>
-                        55, select sq. <br/>
+                        ........ <br/>
+                        .......... <br/>
                         India, 112233
                     </p>
                 </section>
@@ -133,7 +133,7 @@
             <a href="#bottom">down</a>
         </div>
         </footer>
-            <footer id="bottom">&copy: 2010 India</footer>
+            <footer id="bottom">&copy: 2022 India</footer>
     
         </div>
     </div>
